--- a/Html/Lore/Other.html
+++ b/Html/Lore/Other.html
@@ -32,7 +32,7 @@
                 </ul>
             </li>
             <li>
-                <img src="../../Images/Subnautica_Icon.png" title="Accueil" alt="Subnautica_Icon.png" class="Icon-Subnautica"> <a id="asup" href="../../index.html"></a>
+                <a href="../../index.html"><img src="../../Images/Subnautica_Icon.png" alt="Subnautica_Icon.png" title="Icon-Subnautica" class="Icon-Subnautica"/></a>
             </li>
             <li class="deroulant"><a href="../Lore.html">Lore</a>
                 <ul class="sous">
@@ -45,6 +45,22 @@
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
+        <div class="Texte-Other">
+            Plot of the Story :
+        </div><br>
+        <div class="Texte-Other-center">
+            Subnautica takes place in a distant future. The Aurora, a deep-space vessel constructed by the Alterra Corporation, has been sent to a system at the outer reaches of known space on its maiden voyage.<br><br>
+            Its primary mission is to build a section of high-speed space travel infrastructure known as a Phasegate. However, its secondary mission, unknown to most of the crew, is to search for and, possibly, rescue the crew of a ship named the Degasi, which crashed on planet 4546B ten years prior.<br><br>
+            As the Aurora enters the orbit of 4546B, it is attacked by a mysterious energy-pulse and begins to crash land on the planet. Several crew members climb into escape pods, including Ryley Robinson, the player character. The other lifepods' inhabitants perish through various means, leaving Ryley as the lone survivor.<br><br>
+            Ryley finds records of the Degasi's crew stating that only three survived the initial crash, but later two out of the three are confirmed dead and one is presumed dead.<br><br>
+            Ryley also learns of the existence of the Precursors, an ancient, advanced alien species that came to planet 4546B approximately one thousand years ago in search of a cure for a highly infectious disease, known as the Kharaa Bacterium.<br><br>
+            The Precursors discovered Kharaa during the exploration of an unknown planet, and the disease spread due to a failure in quarantine procedures, killing over 140 billion individuals. Investigating thousands of planets in an attempt to find a cure, the Precursors eventually located a species of organism on 4546B they named the Sea Emperor Leviathan, which produced an enzyme that could cure Kharaa.<br><br>
+            However, the only living Sea Emperor was too old to produce the enzyme in enough potency to have any effect, and the Precursors were unable to force its only eggs to hatch. In an attempt to investigate the egg-hatching process of the Sea Emperor, the Precursors took the egg of a related species, the Sea Dragon Leviathan, but the mother destroyed a Precursor research facility and inadvertently released samples of Kharaa into the planet's ecosystem.<br><br>
+            Forced to evacuate, the Precursors enabled a facility known as the Quarantine Enforcement Platform, which consists of a large weapon that fires on any ships attempting to leave or land on the planet. It is discovered that this weapon caused the crash of the Degasi and the Aurora.<br><br>
+            The Sea Emperor, which seeks the freedom of her children, communicates telepathically with Ryley and helps him discover the prison in which she is held captive. <br><br>
+            She gives Ryley information on how to hatch her eggs, who does so and is cured by the enzyme produced by the juvenile Sea Emperors. Ryley then disables the Quarantine Enforcement Platform (only achievable by one not infected with Kharaa) and constructs a rocket with blueprints transmitted by Alterra Corporation to a still functioning computer within the wreckage of the Aurora.<br><br>
+            After escaping the planet, the Sea Emperor communicates with Ryley a final time, promising that the two "go together" although they are different.  
+        </div>
     </div>
 </body>
 </html>
