--- a/Html/Mobs-Type/Mobs-Mort.html
+++ b/Html/Mobs-Type/Mobs-Mort.html
@@ -9,7 +9,7 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="Main-Background">
+    <div class="Main-Background-Mort">
     <!--Bare de navigation (Menu déroulant)-->
         <nav>
         <ul>
@@ -32,7 +32,7 @@
                 </ul>
             </li>
             <li>
-                <img src="../../Images/Subnautica_Icon.png" title="Accueil" alt="Subnautica_Icon.png" class="Icon-Subnautica"> <a id="asup" href="../../index.html"></a>
+                <a href="../../index.html"><img src="../../Images/Subnautica_Icon.png" alt="Subnautica_Icon.png" title="Icon-Subnautica" class="Icon-Subnautica"/></a>
             </li>
             <li class="deroulant"><a href="../Lore.html">Lore</a>
                 <ul class="sous">
