--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </ul>
             </li>
             <li>
-                <a id="asup" href="index.html"><img src="Images/Subnautica_Icon.png" title="Accueil" alt="Subnautica_Icon.png" class="Icon-Subnautica"></a>
+                <a href="index.html"><img src="Images/Subnautica_Icon.png" alt="Subnautica_Icon.png" title="Icon-Subnautica" class="Icon-Subnautica"/></a>
             </li>
             <li class="deroulant"><a href="Html/Lore.html">Lore</a>
                 <ul class="sous">
@@ -48,16 +48,32 @@
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
     <br>
-        <div>
-            Editeur :
-            <br>
-            <img src="Images/Unknow_World_Logo.jpg" title="Logo de UnknowWorld" alt="Unknow_World_Logo">
-        </div>
-        <div>
-            Date de création :
-            <br>
-            <br>
-            16 Décembre 2014 
+        <div class="Texte-index-center">
+            <div class="Texte-index">
+                Publisher & Developper :
+                <br>
+                <img id="Unknown-Studio" src="Images/Unknow_World_Logo.jpg" title="Logo de UnknowWorld" alt="Unknow_World_Logo">
+            </div>
+            <div>
+                Creation :
+                <br>
+                <br>
+                16 Décembre 2014 
+            </div><br>
+            <div>
+                Histoire :
+            </div><br>
+            <div>
+                Subnautica is an open-world survival action-adventure video game developed and published by Unknown Worlds Entertainment. <br>
+                Players are free to explore the ocean on the alien planet 4546B, after their spaceship, the Aurora, crashes on the planet's surface.<br>
+                Subnautica was released in early access for Microsoft Windows in December 2014, macOS in June 2015, and for Xbox One in May 2016.<br>
+                It was released out of early access in January 2018 for Microsoft Windows and macOS, with versions for Xbox One and PlayStation 4 in December 2018. 
+            </div><br>
+            <div>
+                Game LeaderShip : Charlie Chaveland <br>
+                <img id="Charlie" src="Images/Charlie_Cleveland.png" title="Charlie Cheveland" alt="Charlie_Cleveland.png">
+            </div><br><br>
+                If you want to see how the game was created and where this studio started you can go and see<a href="https://youtu.be/6S6bgQnlP1w"> this video : </a> 
         </div>
     </div>
     
