--- a/Html/Dificulty-LV/Dificulty-2.html
+++ b/Html/Dificulty-LV/Dificulty-2.html
@@ -32,7 +32,7 @@
                 </ul>
             </li>
             <li>
-                <img src="../../Images/Subnautica_Icon.png" title="Accueil" alt="Subnautica_Icon.png" class="Icon-Subnautica"> <a id="asup" href="../../index.html"></a>
+                <a href="../../index.html"><img src="../../Images/Subnautica_Icon.png" alt="Subnautica_Icon.png" title="Icon-Subnautica" class="Icon-Subnautica"/></a>
             </li>
             <li class="deroulant"><a href="Lore.html">Lore</a>
                 <ul class="sous">
