--- a/Html/Link.html
+++ b/Html/Link.html
@@ -32,7 +32,7 @@
                 </ul>
             </li>
             <li>
-                <img src="../Images/Subnautica_Icon.png" title="Accueil" alt="Subnautica_Icon.png" class="Icon-Subnautica"> <a id="asup" href="../index.html"></a>
+                <a href="../index.html"><img src="../Images/Subnautica_Icon.png" alt="Subnautica_Icon.png" title="Icon-Subnautica" class="Icon-Subnautica"/></a>
             </li>
             <li class="deroulant"><a href="Lore.html">Lore</a>
                 <ul class="sous">
@@ -71,7 +71,15 @@
             <td>Si ce site vous a donner envie de vous lancer dans l'aventure ou tous simplement de regarder d'autres avis, cliquer sur le logo Steam pour vous rendre sur la page d'achats Steam de Subnautica.</td>
         </tr>
     </table>
-
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div id="creators">
         Site créer par : Alexandre Szalai 
     </div>
