--- a/Html/Mobs.html
+++ b/Html/Mobs.html
@@ -32,8 +32,7 @@
                 </ul>
             </li>
             <li>
-                <img src="../Images/Subnautica_Icon.png" title="Accueil" alt="Subnautica_Icon.png" class="Icon-Subnautica"> <a id="asup" href="../index.html"></a>
-            </li>
+                <a href="../index.html"><img src="../Images/Subnautica_Icon.png" alt="Subnautica_Icon.png" title="Icon-Subnautica" class="Icon-Subnautica"/></a>
             <li class="deroulant"><a href="Lore.html">Lore</a>
                 <ul class="sous">
                     <li><a href="Lore/LandPods.html">LandPods &ensp;</a></li>
